--- a/src/Components/Components.css
+++ b/src/Components/Components.css
@@ -9,6 +9,7 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 header{
     width: 100%;
     display: flex;
@@ -16,7 +17,7 @@ header{
     align-items: baseline;
     padding: 1rem 1rem 0.5rem 2rem;
     box-shadow: 0 2px 6px -2px rgb(210, 198, 198);
-    background-color: #0d0d0d;
+    background-color:orange;
 }
 h1{
     /* font-family: 'Bungee Shade', cursive; */
@@ -74,6 +75,7 @@ nav{
     text-align: center;
     width: 100%;
     padding: 2rem;
+    /* background-color: rgb(24, 218, 24); */
 }
 .nav2 {
     display: none;
@@ -84,24 +86,25 @@ nav{
 .links{
     color: #0d0d0d9d;
     text-decoration: none;
-    margin-right: 2rem;
+    margin-right: 4rem;
     font-weight: 500;
     padding-bottom: 0.3rem;
 }
 .links:hover{
-    color: gray;
+    color:orange;
 }
 .active{
-    color: gray;
+    color:orange;
     border-bottom: 2px solid #ef9273;
+
 }
 .dropdown {
     position: relative;
     display: inline-block;
 }
 .dropdown-content {
-    width: 52rem;
-    height: 23rem;
+    width: 45rem;
+    height: 13rem;
     display: none;
     position: absolute;
     top: 1.5rem;
@@ -118,7 +121,7 @@ nav{
     color: rgba(0, 0, 0, 0.683);
     text-decoration: none;
     display: block;
-    padding: 0.5rem;
+    padding: 0.3rem;
 }
 .dropdown:hover .dropdown-content {
     display: block;
